--- a/index.html
+++ b/index.html
@@ -1,119 +1,142 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Time Series Data</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Time Series Chart</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <style>
-        body {
-            font-family: sans-serif;
-            text-align: center;
-        }
-        #chartContainer {
-            width: 80%;
-            margin: 20px auto;
-        }
-    </style>
+    <script src="https://cdn.jsdelivr.net/npm/moment"></script>
+    <script src="https://cdn.jsdelivr.net/npm/moment-timezone"></script>
+
 </head>
-<body>
-<h1>Time Series Data</h1>
+<body class="bg-gray-100">
+<div class="container mx-auto p-4">
+    <h1 class="text-2xl font-bold mb-4">Time Series Chart</h1>
 
-<div>
-    <label for="startDate">Start Date:</label>
-    <input type="date" id="startDate">
-    <label for="endDate">End Date:</label>
-    <input type="date" id="endDate">
-    <button onclick="fetchData()">Refresh</button>
-</div>
+    <div class="flex space-x-4 mb-4">
+        <div>
+            <label for="startDate" class="block text-gray-700 text-sm font-bold mb-2">Start Date:</label>
+            <input type="datetime-local" id="startDate" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+        </div>
+        <div>
+            <label for="endDate" class="block text-gray-700 text-sm font-bold mb-2">End Date:</label>
+            <input type="datetime-local" id="endDate" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+        </div>
+        <div>
+            <button id="fetchData" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Fetch Data</button>
+        </div>
+    </div>
 
-<div id="chartContainer">
-    <canvas id="myChart"></canvas>
+    <canvas id="timeSeriesChart" aria-label="Time Series Chart" role="img"></canvas>
 </div>
 
 <script>
-    let myChart; // 用于存储图表实例
+    const ctx = document.getElementById('timeSeriesChart').getContext('2d');
+    let chart; // Declare chart variable in the outer scope
 
-    // 计算默认的开始日期和结束日期
-    function getDefaultDates() {
-        const today = new Date();
-        const endDate = today.toISOString().slice(0, 10); // 格式化为 YYYY-MM-DD
-
-        const sevenDaysAgo = new Date(today);
-        sevenDaysAgo.setDate(today.getDate() - 6); // 获取7天前的日期
-        const startDate = sevenDaysAgo.toISOString().slice(0, 10); // 格式化为 YYYY-MM-DD
-
-        return { startDate, endDate };
+    function toUTC(dateString) {
+        const localMoment = moment(dateString);
+        return localMoment.utc().format('YYYY-MM-DD HH:mm');
     }
 
-    async function fetchData() {
-        const startDate = document.getElementById('startDate').value;
-        const endDate = document.getElementById('endDate').value;
+    function fromUTC(utcTimestamp) {
+        return moment.utc(utcTimestamp).local().format('YYYY-MM-DD HH:mm');
+    }
 
-        const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDate}&endDate=${endDate}`;
+    function fetchData(startDateUTC, endDateUTC) {
+        const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}`;
 
-        try {
-            const response = await fetch(apiUrl);
-            const data = await response.json();
-            renderChart(data);
-        } catch (error) {
-            console.error('Error fetching data:', error);
-            alert('Failed to fetch data');
+
+        fetch(apiUrl)
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
+                return response.json();
+            })
+            .then(data => {
+                const labels = data.map(item => fromUTC(item.timestamp));
+                const values = data.map(item => item.value);
+
+                updateChart(labels, values);
+            })
+            .catch(error => {
+                console.error("Error fetching data:", error);
+                alert("Failed to fetch data. Check console for details.");
+            });
+    }
+
+    function updateChart(labels, values) {
+        if (chart) {
+            chart.destroy(); // Destroy the existing chart instance
         }
-    }
 
-    function renderChart(data) {
-        const labels = data.map(item => new Date(item.timestamp).toLocaleDateString());
-        const values = data.map(item => item.value);
-
-        const chartData = {
-            labels: labels,
-            datasets: [{
-                label: 'Value',
-                data: values,
-                borderColor: 'rgb(75, 192, 192)',
-                tension: 0.1
-            }]
-        };
-
-        const chartOptions = {
-            scales: {
-                x: {
-                    title: {
-                        display: true,
-                        text: 'Date'
-                    }
-                },
-                y: {
-                    title: {
-                        display: true,
-                        text: 'Value'
+        chart = new Chart(ctx, {
+            type: 'line',
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: 'Value',
+                    data: values,
+                    borderColor: 'rgb(75, 192, 192)',
+                    tension: 0.1
+                }]
+            },
+            options: {
+                scales: {
+                    x: {
+                        type: 'category',
+                        title: {
+                            display: true,
+                            text: 'Time'
+                        }
+                    },
+                    y: {
+                        title: {
+                            display: true,
+                            text: 'Value'
+                        }
                     }
                 }
             }
-        };
-
-        const ctx = document.getElementById('myChart').getContext('2d');
-
-        // 销毁之前的图表实例，避免内存泄漏
-        if (myChart) {
-            myChart.destroy();
-        }
-
-        myChart = new Chart(ctx, {
-            type: 'line', // 选择图表类型，例如 'line', 'bar'
-            data: chartData,
-            options: chartOptions
         });
     }
 
-    // 页面加载完成后执行
-    window.onload = function() {
-        const { startDate, endDate } = getDefaultDates();
 
-        document.getElementById('startDate').value = startDate;
-        document.getElementById('endDate').value = endDate;
+    document.addEventListener('DOMContentLoaded', () => {
+        const startDateInput = document.getElementById('startDate');
+        const endDateInput = document.getElementById('endDate');
+        const fetchDataButton = document.getElementById('fetchData');
 
-        fetchData(); // 初始加载数据
-    };
+        // Set default date range to last 200 minutes
+        const now = moment();
+        const twoHundredMinutesAgo = moment().subtract(200, 'minutes');
+
+        startDateInput.value = twoHundredMinutesAgo.format('YYYY-MM-DDTHH:mm');
+        endDateInput.value = now.format('YYYY-MM-DDTHH:mm');
+
+
+        fetchDataButton.addEventListener('click', () => {
+            const startDateLocal = startDateInput.value;
+            const endDateLocal = endDateInput.value;
+
+            const startDateUTC = toUTC(startDateLocal);
+            const endDateUTC = toUTC(endDateLocal);
+
+            fetchData(startDateUTC, endDateUTC);
+        });
+
+        // Initial fetch with default dates
+        const initialStartDateLocal = startDateInput.value;
+        const initialEndDateLocal = endDateInput.value;
+
+        const initialStartDateUTC = toUTC(initialStartDateLocal);
+        const initialEndDateUTC = toUTC(initialEndDateLocal);
+
+        fetchData(initialStartDateUTC, initialEndDateUTC);
+
+    });
 </script>
 </body>
 </html>
