--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     function fetchData(startDateUTC, endDateUTC) {
-        const apiUrl = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}`;
+        const apiUrl = `http://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}`;
 
 
         fetch(apiUrl)
