--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     function fetchData(startDateUTC, endDateUTC) {
-        const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}`;
+        const apiUrl = `http://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}`;
 
 
         fetch(apiUrl)
@@ -77,7 +77,7 @@
             data: {
                 labels: labels,
                 datasets: [{
-                    label: 'Value',
+                    label: '发帖数',
                     data: values,
                     borderColor: 'rgb(75, 192, 192)',
                     tension: 0.1
@@ -95,7 +95,7 @@
                     y: {
                         title: {
                             display: true,
-                            text: 'Value'
+                            text: '发帖数'
                         }
                     }
                 }
