--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     }
 
     function fetchData(startDateUTC, endDateUTC, timeInterval) {
-        // const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
-        const apiUrl = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        //const apiUrl = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
 
 
         fetch(apiUrl)
