--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment-timezone"></script>
-
 </head>
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
@@ -55,6 +54,21 @@
         </div>
 
         <div>
+            <label for="compareOffset" class="block text-gray-700 text-sm font-bold mb-2">对比偏移:</label>
+            <div class="flex gap-2">
+                <input type="number" id="compareOffset" value="0" min="0"
+                       class="shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-24"
+                       placeholder="0 表示不对比">
+                <select id="compareUnit"
+                        class="shadow appearance-none border rounded py-2 px-2 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="hours">小时</option>
+                    <option value="days">天</option>
+                </select>
+            </div>
+        </div>
+
+
+        <div>
             <button id="fetchData"
                     class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                 查询
@@ -67,11 +81,10 @@
 
 <script>
     const ctx = document.getElementById('timeSeriesChart').getContext('2d');
-    let chart; // Declare chart variable in the outer scope
+    let chart;
 
     function toUTC(dateString) {
-        const localMoment = moment(dateString);
-        return localMoment.utc().format('YYYY-MM-DD HH:mm');
+        return moment(dateString).utc().format('YYYY-MM-DD HH:mm');
     }
 
     function fromUTC(utcTimestamp) {
@@ -79,52 +92,28 @@
     }
 
     function fetchData(startDateUTC, endDateUTC, timeInterval) {
-        const apiUrl = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
-        //const apiUrl = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
-
-
-        fetch(apiUrl)
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error(`HTTP error! status: ${response.status}`);
-                }
-                return response.json();
-            })
-            .then(data => {
-                const labels = data.map(item => fromUTC(item.timestamp));
-                const values = data.map(item => item.value);
-
-                updateChart(labels, values);
-            })
-            .catch(error => {
-                console.error("Error fetching data:", error);
-                alert("Failed to fetch data. Check console for details.");
-            });
+        const url = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        return fetch(url).then(res => {
+            if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
+            return res.json();
+        });
     }
 
-    function updateChart(labels, values) {
-        if (chart) {
-            chart.destroy(); // Destroy the existing chart instance
-        }
+    function updateChart(labels, datasets) {
+        if (chart) chart.destroy();
 
         chart = new Chart(ctx, {
             type: 'line',
             data: {
                 labels: labels,
-                datasets: [{
-                    label: '发帖数',
-                    data: values,
-                    borderColor: 'rgb(75, 192, 192)',
-                    tension: 0.1
-                }]
+                datasets: datasets
             },
             options: {
                 scales: {
                     x: {
-                        type: 'category',
                         title: {
                             display: true,
-                            text: 'Time'
+                            text: '时间'
                         }
                     },
                     y: {
@@ -138,89 +127,84 @@
         });
     }
 
-
     document.addEventListener('DOMContentLoaded', () => {
         const startDateInput = document.getElementById('startDate');
         const endDateInput = document.getElementById('endDate');
         const fetchDataButton = document.getElementById('fetchData');
         const timeIntervalSelect = document.getElementById('timeInterval');
         const rangeSelect = document.getElementById('rangeSelect');
+        const compareOffsetInput = document.getElementById('compareOffset');
 
         function setDateRange(range) {
             const now = moment();
             let start;
-
             switch (range) {
-                case '2h':
-                    start = moment().subtract(2, 'hours');
-                    break;
-                case '8h':
-                    start = moment().subtract(8, 'hours');
-                    break;
-                case '24h':
-                    start = moment().subtract(24, 'hours');
-                    break;
-                case '3d':
-                    start = moment().subtract(3, 'days');
-                    break;
-                case '5d':
-                    start = moment().subtract(5, 'days');
-                    break;
-                case '7d':
-                    start = moment().subtract(7, 'days');
-                    break;
-                default:
-                    return; // Do nothing for custom
+                case '2h': start = moment().subtract(2, 'hours'); break;
+                case '8h': start = moment().subtract(8, 'hours'); break;
+                case '24h': start = moment().subtract(24, 'hours'); break;
+                case '3d': start = moment().subtract(3, 'days'); break;
+                case '5d': start = moment().subtract(5, 'days'); break;
+                case '7d': start = moment().subtract(7, 'days'); break;
+                default: return;
             }
-
             startDateInput.value = start.format('YYYY-MM-DDTHH:mm');
             endDateInput.value = now.format('YYYY-MM-DDTHH:mm');
         }
 
-
         rangeSelect.addEventListener('change', () => {
             setDateRange(rangeSelect.value);
-            // Trigger data fetch when a predefined range is selected
-            const startDateLocal = startDateInput.value;
-            const endDateLocal = endDateInput.value;
-            const timeInterval = timeIntervalSelect.value;
-
-            const startDateUTC = toUTC(startDateLocal);
-            const endDateUTC = toUTC(endDateLocal);
-
-            fetchData(startDateUTC, endDateUTC, timeInterval);
         });
-
-
-        // Set default date range to last 200 minutes
-        const now = moment();
-        const twoHundredMinutesAgo = moment().subtract(200, 'minutes');
-
-        startDateInput.value = twoHundredMinutesAgo.format('YYYY-MM-DDTHH:mm');
-        endDateInput.value = now.format('YYYY-MM-DDTHH:mm');
-
 
         fetchDataButton.addEventListener('click', () => {
             const startDateLocal = startDateInput.value;
             const endDateLocal = endDateInput.value;
             const timeInterval = timeIntervalSelect.value;
+            const compareOffset = parseInt(compareOffsetInput.value) || 0;
+            const compareUnit = document.getElementById('compareUnit').value; // 'hours' or 'days'
 
             const startDateUTC = toUTC(startDateLocal);
             const endDateUTC = toUTC(endDateLocal);
 
-            fetchData(startDateUTC, endDateUTC, timeInterval);
+            const startCompareUTC = moment.utc(startDateUTC).subtract(compareOffset, compareUnit).format('YYYY-MM-DD HH:mm');
+            const endCompareUTC = moment.utc(endDateUTC).subtract(compareOffset, compareUnit).format('YYYY-MM-DD HH:mm');
+
+            Promise.all([
+                fetchData(startDateUTC, endDateUTC, timeInterval),
+                compareOffset > 0 ? fetchData(startCompareUTC, endCompareUTC, timeInterval) : Promise.resolve(null)
+            ]).then(([currentData, compareData]) => {
+                const labels = currentData.map(item => fromUTC(item.timestamp));
+                const datasets = [
+                    {
+                        label: '当前数据',
+                        data: currentData.map(item => item.value),
+                        borderColor: 'rgb(75, 192, 192)',
+                        tension: 0.1
+                    }
+                ];
+                if (compareData) {
+                    datasets.push({
+                        label: `对比数据 (${compareOffset}${compareUnit === 'days' ? '天' : '小时'}前)`,
+                        data: compareData.map(item => item.value),
+                        borderColor: 'rgb(255, 99, 132)',
+                        tension: 0.1
+                    });
+                }
+                updateChart(labels, datasets);
+            }).catch(err => {
+                console.error("数据获取失败:", err);
+                alert("获取数据失败，请检查网络或控制台日志。");
+            });
         });
 
-        // Initial fetch with default dates
-        const initialStartDateLocal = startDateInput.value;
-        const initialEndDateLocal = endDateInput.value;
-        const initialTimeInterval = timeIntervalSelect.value;
 
-        const initialStartDateUTC = toUTC(initialStartDateLocal);
-        const initialEndDateUTC = toUTC(initialEndDateLocal);
+        // 初始化默认值
+        const now = moment();
+        const twoHundredMinutesAgo = moment().subtract(200, 'minutes');
+        startDateInput.value = twoHundredMinutesAgo.format('YYYY-MM-DDTHH:mm');
+        endDateInput.value = now.format('YYYY-MM-DDTHH:mm');
 
-        fetchData(initialStartDateUTC, initialEndDateUTC, initialTimeInterval);
-
+        // 自动触发一次初始查询
+        fetchDataButton.click();
     });
 </script>
 </body>
