--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大时代景气指数</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment"></script>
-    <script src="https://cdn.jsdelivr.net/npm/moment-timezone"></script>
+    <script src="https://jsd.onmicrosoft.cn/npm/chart.js"></script>
+    <script src="https://jsd.onmicrosoft.cn/npm/moment"></script>
+    <script src="https://jsd.onmicrosoft.cn/npm/moment-timezone"></script>
 </head>
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
