--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大时代景气指数</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://jsd.onmicrosoft.cn/npm/chart.js"></script>
-    <script src="https://jsd.onmicrosoft.cn/npm/moment"></script>
-    <script src="https://jsd.onmicrosoft.cn/npm/moment-timezone"></script>
+    <script src="http://fastly.jsdelivr.net/npm/chart.js"></script>
+    <script src="http://fastly.jsdelivr.net/npm/moment"></script>
+    <script src="http://fastly.jsdelivr.net/npm/moment-timezone"></script>
 </head>
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
@@ -100,6 +100,7 @@
             return Promise.reject(new Error("无效的查询参数"));
         }
         const url = `https://nga_grep.yikakia.com/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
+        // const url = `http://localhost:11648/api/timeseries?startDate=${startDateUTC}&endDate=${endDateUTC}&timeInterval=${timeInterval}`;
         console.log("Fetching data from:", url); // Log URL for debugging
         return fetch(url).then(res => {
             if (!res.ok) throw new Error(`HTTP error! status: ${res.status}`);
