--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="http://fastly.jsdelivr.net/npm/chart.js"></script>
     <script src="http://fastly.jsdelivr.net/npm/moment"></script>
     <script src="http://fastly.jsdelivr.net/npm/moment-timezone"></script>
+
+    <! -- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M3SQNFGV5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-8M3SQNFGV5');
+    </script>
+
 </head>
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
