--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <script src="http://fastly.jsdelivr.net/npm/moment"></script>
     <script src="http://fastly.jsdelivr.net/npm/moment-timezone"></script>
 
-    <! -- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M3SQNFGV5"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
         gtag('config', 'G-8M3SQNFGV5');
     </script>
@@ -21,72 +24,76 @@
 </head>
 <body class="bg-gray-100">
 <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">大时代景气指数(NGA:706)</h1>
+    <div class="w-full max-w-6xl mx-auto h-[300px] sm:h-[350px] md:h-[400px] lg:h-[500px]">
 
-    <div class="flex flex-wrap items-center gap-4 mb-4">
+        <h1 class="text-2xl font-bold mb-4">大时代景气指数(NGA:706)</h1>
+        <div class="flex flex-wrap items-center gap-4 mb-4">
 
-        <div>
-            <label for="rangeSelect" class="block text-gray-700 text-sm font-bold mb-2">快速选择:</label>
-            <select id="rangeSelect"
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                <option value="2h">最近2小时</option>
-                <option value="8h">最近8小时</option>
-                <option value="24h">最近24小时</option> <!-- 稍后JS会设置这个为默认 -->
-                <option value="3d">最近3天</option>
-                <option value="5d">最近5天</option>
-                <option value="7d">最近7天</option>
-            </select>
-        </div>
-
-        <div>
-            <label for="startDate" class="block text-gray-700 text-sm font-bold mb-2">开始时间范围:</label>
-            <input type="datetime-local" id="startDate"
-                   class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-        </div>
-        <div>
-            <label for="endDate" class="block text-gray-700 text-sm font-bold mb-2">结束时间范围:</label>
-            <input type="datetime-local" id="endDate"
-                   class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-        </div>
-
-        <div>
-            <label for="timeInterval" class="block text-gray-700 text-sm font-bold mb-2">时间间隔:</label>
-            <select id="timeInterval"
-                    class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                <option value="5m">5 分钟</option>
-                <option value="15m">15 分钟</option> <!-- 稍后JS会设置这个为默认 -->
-                <option value="30m">30 分钟</option>
-                <option value="60m">1 小时</option>
-                <option value="120m">2 小时</option>
-                <option value="24h">1 天</option>
-                <option value="168h">7 天</option>
-            </select>
-        </div>
-
-        <div>
-            <label for="compareOffset" class="block text-gray-700 text-sm font-bold mb-2">对比偏移:</label>
-            <div class="flex gap-2">
-                <input type="number" id="compareOffset" value="0" min="0"
-                       class="shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-24"
-                       placeholder="0 表示不对比">
-                <select id="compareUnit"
-                        class="shadow appearance-none border rounded py-2 px-2 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-                    <option value="hours">小时</option>
-                    <option value="days">天</option> <!-- 稍后JS会设置这个为默认 -->
+            <div>
+                <label for="rangeSelect" class="block text-gray-700 text-sm font-bold mb-2">快速选择:</label>
+                <select id="rangeSelect"
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="2h">最近2小时</option>
+                    <option value="8h">最近8小时</option>
+                    <option value="24h">最近24小时</option> <!-- 稍后JS会设置这个为默认 -->
+                    <option value="3d">最近3天</option>
+                    <option value="5d">最近5天</option>
+                    <option value="7d">最近7天</option>
                 </select>
+            </div>
+
+            <div>
+                <label for="startDate" class="block text-gray-700 text-sm font-bold mb-2">开始时间范围:</label>
+                <input type="datetime-local" id="startDate"
+                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+            <div>
+                <label for="endDate" class="block text-gray-700 text-sm font-bold mb-2">结束时间范围:</label>
+                <input type="datetime-local" id="endDate"
+                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+            </div>
+
+            <div>
+                <label for="timeInterval" class="block text-gray-700 text-sm font-bold mb-2">时间间隔:</label>
+                <select id="timeInterval"
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                    <option value="5m">5 分钟</option>
+                    <option value="15m">15 分钟</option> <!-- 稍后JS会设置这个为默认 -->
+                    <option value="30m">30 分钟</option>
+                    <option value="60m">1 小时</option>
+                    <option value="120m">2 小时</option>
+                    <option value="24h">1 天</option>
+                    <option value="168h">7 天</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="compareOffset" class="block text-gray-700 text-sm font-bold mb-2">对比偏移:</label>
+                <div class="flex gap-2">
+                    <input type="number" id="compareOffset" value="0" min="0"
+                           class="shadow appearance-none border rounded py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline w-24"
+                           placeholder="0 表示不对比">
+                    <select id="compareUnit"
+                            class="shadow appearance-none border rounded py-2 px-2 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                        <option value="hours">小时</option>
+                        <option value="days">天</option> <!-- 稍后JS会设置这个为默认 -->
+                    </select>
+                </div>
+            </div>
+
+
+            <div>
+                <button id="fetchData"
+                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                    查询
+                </button>
             </div>
         </div>
 
 
-        <div>
-            <button id="fetchData"
-                    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-                查询
-            </button>
-        </div>
+        <canvas id="timeSeriesChart" aria-label="发帖量统计" role="img"></canvas>
     </div>
 
-    <canvas id="timeSeriesChart" aria-label="Time Series Chart" role="img"></canvas>
 </div>
 
 <script>
@@ -155,7 +162,7 @@
                     intersect: false
                 },
                 responsive: true,
-                maintainAspectRatio: true // Or false depending on layout needs
+                maintainAspectRatio: false // Or false depending on layout needs
             }
         });
     }
@@ -174,12 +181,24 @@
             const now = moment();
             let start;
             switch (range) {
-                case '2h': start = moment().subtract(2, 'hours'); break;
-                case '8h': start = moment().subtract(8, 'hours'); break;
-                case '24h': start = moment().subtract(24, 'hours'); break;
-                case '3d': start = moment().subtract(3, 'days'); break;
-                case '5d': start = moment().subtract(5, 'days'); break;
-                case '7d': start = moment().subtract(7, 'days'); break;
+                case '2h':
+                    start = moment().subtract(2, 'hours');
+                    break;
+                case '8h':
+                    start = moment().subtract(8, 'hours');
+                    break;
+                case '24h':
+                    start = moment().subtract(24, 'hours');
+                    break;
+                case '3d':
+                    start = moment().subtract(3, 'days');
+                    break;
+                case '5d':
+                    start = moment().subtract(5, 'days');
+                    break;
+                case '7d':
+                    start = moment().subtract(7, 'days');
+                    break;
                 default: // 如果有自定义或其他情况，不清空输入框，让用户手动调整
                     console.warn("未知的快速选择范围:", range);
                     return;
