--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大时代景气指数</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="http://fastly.jsdelivr.net/npm/chart.js"></script>
-    <script src="http://fastly.jsdelivr.net/npm/moment"></script>
-    <script src="http://fastly.jsdelivr.net/npm/moment-timezone"></script>
+    <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/Chart.js/3.7.1/chart.min.js"></script>
+    <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment.js/2.29.1/moment.min.js"></script>
+    <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/moment-timezone/0.5.34/moment-timezone.min.js"></script>
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-8M3SQNFGV5"></script>
     <script>
